--- a/도메인모델.md
+++ b/도메인모델.md
@@ -1,7 +1,7 @@
 # Weekly 도메인 모델 
 
 ## Weekly 도메인
-- 위클리는 사내 주간보고를 작성하고 볼 수 있는 삼성 바이오에피스 사내 서비스이다.
+- 위클리는 사내 주간보고를 작성하고 볼 수 있는 삼성 스프링플러스(가상의 회사) 사내 서비스이다.
 
 ## 도메인 모델
 
